# mcobfF

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-win64.yml
gui/: AppState.cpp  AppState.h
gui/config/: Settings.cpp  Settings.h
mcobfF/: Logger.h  Types.h
mcobfF/api/: api.cpp  api.h
mcobfF/class/: ClassFileParser.cpp  ClassFileParser.h  ClassHierarchyBuilder.cpp  ClassHierarchyBuilder.h  ClassInfo.h
mcobfF/config/: ApiConfig.h
mcobfF/decompiler/: FernflowerDecompiler.cpp  FernflowerDecompiler.h  JavaMethodParser.cpp  JavaMethodParser.h
mcobfF/dumper/: JarDumper.cpp  JarDumper.h
mcobfF/file/: FileSystem.cpp  FileSystem.h
mcobfF/mapping/: InheritanceResolver.cpp  InheritanceResolver.h  MappingData.cpp  MappingData.h  MappingParser.cpp  MappingParser.h  MappingResolver.cpp  MappingResolver.h  MappingWriter.cpp  MappingWriter.h  MojMapParser.cpp  MojMapParser.h  SRGParser.cpp  SRGParser.h  SRGResolver.cpp  SRGResolver.h  TinyMappingParser.cpp  TinyMappingParser.h
mcobfF/network/: HttpsClient.cpp  HttpsClient.h  JreDownloader.cpp  JreDownloader.h  VersionDownloader.cpp  VersionDownloader.h
mcobfF/obff/: OBFFArchive.cpp  OBFFArchive.h
mcobfF/zip/: ZipArchive.cpp  ZipArchive.h
